[package]

name = "sort"
version = "0.0.1"
authors = ["Rotari Razvan-Gabriel <razvanrotari@gmail.com>"]

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.sdl2_game_window]
git = "https://github.com/PistonDevelopers/sdl2_game_window.git"

[dependencies.graphics]
git = "https://github.com/PistonDevelopers/rust-graphics.git"

[dependencies.opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[[bin]]
name = "sort"
test = true
